sources += [
    'nsmFwSwInventory/NVLinkManagementNICSWInventory.cpp',
    'nsmFwSwInventory/PCIeRetimerFWInventory.cpp',
    'nsmFwSwInventory/GPUSWInventory.cpp',
    'nsmFwSwInventory/nsmFirmwareInventory.cpp',
    'nsmFwSwInventory/nsmSoftwareSettings.cpp',
]

nsmd_headers += ['.', '..']

if get_option('tests').enabled()
    subdir('test')
endif