
sources += [
  'nsmNumericSensor/nsmTemp.cpp',
  'nsmNumericSensor/nsmPower.cpp',
  'nsmNumericSensor/nsmEnergy.cpp',
  'nsmNumericSensor/nsmVoltage.cpp',
  'nsmNumericSensor/nsmAltitudePressure.cpp',
  'nsmNumericSensor/nsmTempAggregator.cpp',
  'nsmNumericSensor/nsmPowerAggregator.cpp',
  'nsmNumericSensor/nsmEnergyAggregator.cpp',
  'nsmNumericSensor/nsmVoltageAggregator.cpp',
  'nsmNumericSensor/nsmNumericSensor.cpp',
  'nsmNumericSensor/nsmNumericAggregator.cpp',
  'nsmNumericSensor/nsmNumericSensorFactory.cpp',
]

nsmd_headers += ['.', '..']

if get_option('tests').enabled()
    subdir('test')
endif
