
sources += [
  'nsmNumericSensor/nsmTemp.cpp',
  'nsmNumericSensor/nsmThreshold.cpp',
  'nsmNumericSensor/nsmThresholdValue.cpp',
  'nsmNumericSensor/nsmPower.cpp',
  'nsmNumericSensor/nsmEnergy.cpp',
  'nsmNumericSensor/nsmVoltage.cpp',
  'nsmNumericSensor/nsmAltitudePressure.cpp',
  'nsmNumericSensor/nsmTempAggregator.cpp',
  'nsmNumericSensor/nsmThresholdAggregator.cpp',
  'nsmNumericSensor/nsmPowerAggregator.cpp',
  'nsmNumericSensor/nsmEnergyAggregator.cpp',
  'nsmNumericSensor/nsmVoltageAggregator.cpp',
  'nsmNumericSensor/nsmNumericSensor.cpp',
  'nsmNumericSensor/nsmNumericAggregator.cpp',
  'nsmNumericSensor/nsmNumericSensorFactory.cpp',
  'nsmNumericSensor/nsmThresholdFactory.cpp',
]

nsmd_headers += ['.', '..']

if get_option('tests').enabled()
    subdir('test')
endif
